--- a/kaloriz/templates/core/verify_email.html
+++ b/kaloriz/templates/core/verify_email.html
@@ -3,11 +3,10 @@
 
 {% block title %}Verifikasi Email - Kaloriz{% endblock %}
 
+{% block body_class %}no-navbar-offset{% endblock %}
+
 {% block extra_head %}
 <style>
-  :root {
-    --header-h: 0px;
-  }
 </style>
 {% endblock %}
 
