--- a/kaloriz/templates/core/register.html
+++ b/kaloriz/templates/core/register.html
@@ -3,10 +3,17 @@
 
 {% block title %}Register - Kaloriz{% endblock %}
 
+{% block body_class %}no-navbar-offset{% endblock %}
+
 {% block extra_head %}
 <style>
-  :root {
-    --header-h: 0px;
+  body {
+    margin: 0;
+    padding: 0;
+  }
+
+  footer {
+    display: none;
   }
 </style>
 {% endblock %}
