--- a/kaloriz/templates/core/order_detail.html
+++ b/kaloriz/templates/core/order_detail.html
@@ -448,11 +448,16 @@
 
           const data = await response.json();
           const token = data && data.token;
+          const reusedToken = Boolean(data && data.reused);
           if (!token) {
             throw new Error('Token pembayaran tidak tersedia.');
           }
 
           toggleLoading(false);
+
+          if (reusedToken) {
+            showNotification('Menggunakan token Midtrans yang masih aktif.', 'info');
+          }
 
           window.snap.pay(token, {
             onSuccess(result) {
