--- a/kaloriz/templates/catalog/home.html
+++ b/kaloriz/templates/catalog/home.html
@@ -180,7 +180,8 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img src="https://images.unsplash.com/photo-1555529901-4ab7283885b4?w=1920&h=1080&fit=crop" alt="Diskon Spesial Kaloriz">
+        <img src="{% static 'images/banner2.jpg' %}" alt="Diskon Spesial Kaloriz"
+             onerror="this.src='https://images.unsplash.com/photo-1555529901-4ab7283885b4?w=1920&h=1080&fit=crop'">
         <div class="carousel-caption text-center">
           <h1 class="animate__animated animate__fadeInDown">Diskon Spesial Minggu Ini</h1>
           <p class="lead animate__animated animate__fadeInUp mb-4">Nikmati potongan harga hingga 50% untuk produk pilihan.</p>
