--- a/kaloriz/templates/base.html
+++ b/kaloriz/templates/base.html
@@ -5,33 +5,33 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <title>{% block title %}Kaloriz - Toko Online{% endblock %}</title>
+  <title>{% block title %}Kaloriz - Toko Online Makanan Sehat & Menu Diet{% endblock %}</title>
   {% block meta %}
-  <meta name="description" content="{{ meta_description|default:meta_title }}" />
+  <meta name="description" content="{{ meta_description|default:'Kaloriz adalah toko online makanan sehat yang menyediakan jus, salad, dan menu diet rendah kalori.' }}" />
   <link rel="canonical" href="{{ meta_url|default:request.build_absolute_uri }}" />
 
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="{{ meta_title|default:request.site_name|default:'Kaloriz' }}" />
+  <meta property="og:title" content="{{ meta_title|default:'Kaloriz' }}" />
   <meta property="og:description" content="{{ meta_description|default:meta_title }}" />
   <meta property="og:url" content="{{ meta_url|default:request.build_absolute_uri }}" />
   <meta property="og:image" content="{{ meta_image }}" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="{{ meta_title|default:request.site_name|default:'Kaloriz' }}" />
+ <meta name="twitter:title" content="{{ meta_title|default:'Kaloriz' }}" />
   <meta name="twitter:description" content="{{ meta_description|default:meta_title }}" />
   <meta name="twitter:image" content="{{ meta_image }}" />
   {% endblock %}
 
   {% block jsonld %}
   <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Store",
-      "name": "{{ meta_title|default:site_name }}",
-      "url": "{{ site_url }}",
-      "image": "{{ meta_image }}",
-      "description": "{{ meta_description|default:meta_title }}"
-    }
+  {
+    "@context": "https://schema.org",
+    "@type": "Store",
+    "name": "{{ meta_title|default:'Kaloriz' }}",
+    "url": "{{ site_url }}",
+    "image": "{{ meta_image }}",
+    "description": "{{ meta_description|default:meta_title }}"
+  }
   </script>
   {% endblock %}
 
