--- a/kaloriz/templates/core/watchlist.html
+++ b/kaloriz/templates/core/watchlist.html
@@ -34,7 +34,17 @@
         </div>
         <div class="watchlist-card-body">
           <h4>{{ item.product.name|truncatewords:8 }}</h4>
-          <p class="watchlist-price">Rp {{ item.product.get_display_price|dot_separator }}</p>
+          <p class="watchlist-price">
+            {% if item.product.is_flash_sale_active %}
+              <small class="text-muted d-block"><s>Rp {{ item.product.price|dot_separator }}</s></small>
+              <span class="text-warning font-weight-bold">Rp {{ item.product.get_display_price|dot_separator }}</span>
+            {% elif item.product.is_on_sale %}
+              <small class="text-muted d-block"><s>Rp {{ item.product.price|dot_separator }}</s></small>
+              <span class="text-danger font-weight-bold">Rp {{ item.product.get_display_price|dot_separator }}</span>
+            {% else %}
+              Rp {{ item.product.price|dot_separator }}
+            {% endif %}
+          </p>
           <div class="watchlist-meta">Ditambahkan: {{ item.added_at|date:"d M Y" }}</div>
           <div class="watchlist-actions">
             <a href="{% url 'catalog:product_detail' item.product.slug %}" class="btn btn-primary btn-sm">
